--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: csharp
 solution: "./TLM/TMPE.sln"
 before_install:
-  - cd /tmp && curl -L --silent --output /dev/null -o Dependencies.tar.gz $DEPENDENCIES_URL
-  - mkdir -p /home/travis/build/krzychu124/Cities-Skylines-Traffic-Manager-President-Edition/managed && tar -xzf /tmp/Dependencies.tar.gz -C /home/travis/build/krzychu124/Cities-Skylines-Traffic-Manager-President-Edition/managed
+  - cd /tmp && curl -L -o Dependencies.tar.gz $DEPENDENCIES_URL
+  - mkdir -p /home/travis/build/krzychu124/Cities-Skylines-Traffic-Manager-President-Edition/managed
+  - tar -xzf /tmp/Dependencies.tar.gz -C /home/travis/build/krzychu124/Cities-Skylines-Traffic-Manager-President-Edition/managed
   - cd /home/travis/build/krzychu124/Cities-Skylines-Traffic-Manager-President-Edition
 script:
   - msbuild /p:Configuration=Release /p:TreatWarningsAsErrors="false" /p:PostBuildEvent= ./TLM/TMPE.sln
