--- a/TLM/TMPE.TestGameBridge/TMPE.TestGameBridge.csproj
+++ b/TLM/TMPE.TestGameBridge/TMPE.TestGameBridge.csproj
@@ -50,7 +50,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Assembly-CSharp">
-      <HintPath>..\managed\Assembly-CSharp.dll</HintPath>
+      <HintPath>..\dependencies\Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
