--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,6 +5,11 @@ configuration:
 - Release
 before_build:
 - git submodule update --init --recursive
+- mkdir /temp
+- cd /tmp && curl -L -o Dependencies.tar.gz $DEPENDENCIES_URL
+- mkdir -p C:\projects\cities-skylines-traffic-manager-president-edition/TLM/dependencies
+- tar -xzf /tmp/Dependencies.tar.gz -C C:\projects\cities-skylines-traffic-manager-president-edition/TLM/dependencies
+- cd C:\projects\cities-skylines-traffic-manager-president-edition
 - nuget restore TLM/TMPE.sln
 skip_tags: true
 build:
