--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ before_build:
 - git submodule update --init --recursive
 - mkdir tmp
 - cd tmp 
-- curl -Uri $DEPENDENCIES_URL -OutFile Dependencies.tar.gz 
+- curl -Uri $env:DEPENDENCIES_URL -OutFile Dependencies.tar.gz 
 - mkdir -p C:\projects\cities-skylines-traffic-manager-president-edition\TLM\dependencies
 - tar -xzf tmp\Dependencies.tar.gz -C C:\projects\cities-skylines-traffic-manager-president-edition\TLM\dependencies
 - cd C:\projects\cities-skylines-traffic-manager-president-edition
