Add experiment with NetLane speed limit sign render patching
Currently, the Netlane prop rendering does not consider the
configured speed limit when selecting the speed limit sign
to render, resulting in an inaccurate road layout. Resolve by
patching the NetLane prop rendering to replace any speed limit
props being rendered with ones that more accurately reflect
the actual speed limit.

issue #49

--- a/TLM/TLM/TLM.csproj
+++ b/TLM/TLM/TLM.csproj
@@ -122,9 +122,11 @@
     <Compile Include="Manager\Impl\ExtNodeManager.cs" />
     <Compile Include="Manager\Impl\ExtSegmentEndManager.cs" />
     <Compile Include="Manager\Impl\ExtSegmentManager.cs" />
+    <Compile Include="Manager\Impl\LanePropManager.cs" />
     <Compile Include="Manager\Impl\SegmentEndManager.cs" />
     <Compile Include="Patch\_CommonBuildingAI\SimulationStepPatch.cs" />
     <Compile Include="Patch\_HumanAI\ArriveAtDestinationPatch.cs" />
+    <Compile Include="Patch\_NetLane\RenderInstancePatch.cs" />
     <Compile Include="Patch\_RoadBaseAI\GetTrafficLightNodeStatePatch.cs" />
     <Compile Include="Patch\_TrainTrackBaseAI\LevelCrossingSimulationStepPatch.cs" />
     <Compile Include="Patch\_RoadBaseAI\UpdateLanesPatch.cs" />
