--- a/TLM/TMPE.API/TMPE.API.csproj
+++ b/TLM/TMPE.API/TMPE.API.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Manager\IJunctionRestrictionsManager.cs" />
     <Compile Include="Manager\ILaneArrowManager.cs" />
     <Compile Include="Manager\ILaneConnectionManager.cs" />
+    <Compile Include="Manager\ILanePropManager.cs" />
     <Compile Include="Manager\IManagerFactory.cs" />
     <Compile Include="Manager\IOptionsManager.cs" />
     <Compile Include="Manager\IParkingRestrictionsManager.cs" />
