Add runtime speed limit prop generation/texture append
Currently, the prop replacement mechanisms require the use of
loaded props, which limits the number of props that can be shown.
Resolve by adding a mechanism to generate props and asscociated textures
on-the-fly to allow the entire range of speed limits to be shown.

--- a/TLM/TLM/TLM.csproj
+++ b/TLM/TLM/TLM.csproj
@@ -126,6 +126,7 @@
     <Compile Include="Manager\Impl\SegmentEndManager.cs" />
     <Compile Include="Patch\_CommonBuildingAI\SimulationStepPatch.cs" />
     <Compile Include="Patch\_HumanAI\ArriveAtDestinationPatch.cs" />
+    <Compile Include="Patch\_NetLane\PropRenderInstancePatch.cs" />
     <Compile Include="Patch\_NetLane\RenderInstancePatch.cs" />
     <Compile Include="Patch\_RoadBaseAI\GetTrafficLightNodeStatePatch.cs" />
     <Compile Include="Patch\_TrainTrackBaseAI\LevelCrossingSimulationStepPatch.cs" />
@@ -240,6 +241,7 @@
     <Compile Include="State\Flags.cs" />
     <Compile Include="UI\TransportDemandViewMode.cs" />
     <Compile Include="UI\UITransportDemand.cs" />
+    <Compile Include="Util\CustomProp.cs" />
     <Compile Include="Util\GenericObservable.cs" />
     <Compile Include="Util\GenericUnsubscriber.cs" />
     <Compile Include="Util\MathUtil.cs" />
